// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptionSelector Should render an icon when provided 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#221D34",
      "borderRadius": 12,
      "minHeight": 140,
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 12,
      "width": 351,
    }
  }
  testID="optionSelector"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#16102A",
          "borderRadius": 16,
          "height": 40,
          "justifyContent": "center",
          "marginBottom": 16,
          "width": 40,
        },
      ]
    }
  >
    <RNSVGSvgView
      bbHeight="20"
      bbWidth="20"
      fill="none"
      focusable={false}
      height={20}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 20,
            "width": 20,
          },
        ]
      }
      width={20}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGGroup
          clipPath="a"
          fill={
            {
              "payload": 4284273613,
              "type": 0,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M10 10c1.38 0 2.559-.488 3.535-1.465C14.512 7.56 15 6.38 15 5c0-1.38-.488-2.559-1.465-3.535C12.56.488 11.38 0 10 0 8.62 0 7.441.488 6.465 1.465 5.488 2.44 5 3.62 5 5c0 1.38.488 2.559 1.465 3.535C7.44 9.512 8.62 10 10 10Z"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          />
          <RNSVGPath
            d="M19.121 15.28c-.03-.438-.091-.911-.182-1.42a11.053 11.053 0 0 0-.345-1.412 6.705 6.705 0 0 0-.56-1.27 4.574 4.574 0 0 0-.808-1.054 3.399 3.399 0 0 0-1.113-.697 3.914 3.914 0 0 0-1.452-.26c-.078 0-.26.093-.547.28-.286.186-.61.395-.97.625-.36.23-.829.438-1.406.625a5.62 5.62 0 0 1-1.738.28 5.618 5.618 0 0 1-1.739-.28c-.577-.187-1.046-.395-1.406-.625-.36-.23-.683-.439-.97-.625-.286-.187-.469-.28-.547-.28-.53 0-1.013.087-1.452.26-.438.174-.809.406-1.113.697-.304.29-.573.642-.807 1.054-.234.413-.421.836-.56 1.27-.139.434-.254.905-.345 1.413-.091.508-.152.98-.182 1.42-.03.438-.046.887-.046 1.347 0 1.041.317 1.864.95 2.468.634.603 1.477.904 2.527.904h11.38c1.05 0 1.893-.301 2.526-.904.634-.604.951-1.426.951-2.468 0-.46-.015-.91-.046-1.348Z"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          />
        </RNSVGGroup>
        <RNSVGDefs>
          <RNSVGClipPath
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            name="a"
          >
            <RNSVGPath
              d="M0 0h20v20H0z"
              fill={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGClipPath>
        </RNSVGDefs>
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    numberOfLines={2}
    style={
      [
        {
          "color": "white",
          "fontFamily": "Nunito",
          "fontSize": 18,
          "width": "60%",
        },
      ]
    }
  >
    Contacts
  </Text>
</View>
`;

exports[`OptionSelector Should render content 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#221D34",
      "borderRadius": 12,
      "minHeight": 140,
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 12,
      "width": 351,
    }
  }
  testID="optionSelector"
>
  <Text
    numberOfLines={2}
    style={
      [
        {
          "color": "white",
          "fontFamily": "Nunito",
          "fontSize": 18,
          "width": "60%",
        },
      ]
    }
  >
    Contacts
  </Text>
</View>
`;
